--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(untitled)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "-std=c++17 -O0 -fopenmp")
 
-add_executable(index hnsw_index.cpp)
+add_executable(index Index.cpp)
