Python Bindings (works?)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
-project(untitled)
+project(hnsw_index)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "-std=c++17 -O0 -fopenmp")
 
-add_executable(index Index.cpp)
+include_directories(PYTHON_INCLUDE_DIR)
+
+add_executable(index hnsw/Index.cpp)
+#add_executable(bindings python_bindings/bindings.cpp)
