Added Boost dependency. Removed flat_map file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,14 @@ set(CMAKE_CXX_FLAGS "-std=c++17 -O0 -fopenmp")
 
 include_directories(PYTHON_INCLUDE_DIR)
 
-add_executable(index hnsw/Index.cpp)
-#add_executable(bindings python_bindings/bindings.cpp)
+add_executable(index hnsw/index.cpp)
+
+set(Boost_USE_STATIC_LIBS OFF)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
+FIND_PACKAGE(Boost REQUIRED COMPONENTS system)
+
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+    target_link_libraries(index ${Boost_LIBRARIES})
+endif()
