--- a/index_search_server/Dockerfile
+++ b/index_search_server/Dockerfile
@@ -1,11 +1,12 @@
-FROM python:3-alpine
+FROM python:3
 
 RUN mkdir -p /usr/src/app
+RUN mkdir -p /usr/tmp
 WORKDIR /usr/src/app
 
 COPY requirements.txt /usr/src/app/
 
-RUN pip3 install --no-cache-dir -r requirements.txt
+RUN pip3 install -r requirements.txt
 
 COPY . /usr/src/app
 
@@ -13,4 +14,4 @@ EXPOSE 8080
 
 ENTRYPOINT ["python3"]
 
-CMD ["-m", "swagger_server"]
+CMD ["-m", "index_search_server"]
