--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,16 @@
 version: '3'
 services:
-  # find_index_server:
-  #   build: find_index_server
-  #   ports:
-  #    - "8080:8080"
-  image_waiter_server:
+  image_waiter:
     build: image_waiter_server
     ports:
-    - "8081:8081"
+      - "8081:8081"
+    volumes:
+      - /media/roman/Other/celebA:/usr/work_dir
+    depends_on:
+      - index_search
+  index_search:
+    build: index_search_server
+    ports:
+      - "8080:8080"
+    volumes:
+      - /media/roman/Other/celebA/tmp:/usr/tmp
