--- a/index_search_server/Dockerfile
+++ b/index_search_server/Dockerfile
@@ -5,11 +5,12 @@ WORKDIR /usr/src/app
 
 COPY requirements.txt /usr/src/app/
 
+RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt
+RUN git clone https://github.com/strawberrypie/faces.git # bad, but what can we do now :(
+RUN pip3 install -e faces/index/hnsw
 
 COPY . /usr/src/app
-
-EXPOSE 8080
 
 ENTRYPOINT ["python3"]
 
